--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "system.global",
 	"version": "1.0.0",
 	"author": "Jordan Harband",
-	"description": "ECMAScript spec-compliant polyfill/shim for `System.global`",
+	"description": "ECMAScript spec-compliant polyfill/shim for `global`",
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
