--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: node_js
 node_js:
+  - "6.7"
+  - "6.6"
+  - "6.5"
+  - "6.4"
+  - "6.3"
+  - "6.2"
+  - "6.1"
+  - "6.0"
+  - "5.12"
+  - "5.11"
+  - "5.10"
   - "5.9"
   - "5.8"
   - "5.7"
@@ -10,6 +21,8 @@ node_js:
   - "5.2"
   - "5.1"
   - "5.0"
+  - "4.6"
+  - "4.5"
   - "4.4"
   - "4.3"
   - "4.2"
@@ -45,11 +58,28 @@ before_install:
   - 'if [ "${TRAVIS_NODE_VERSION}" != "0.9" ]; then case "$(npm --version)" in 1.*) npm install -g npm@1.4.28 ;; 2.*) npm install -g npm@2 ;; esac ; fi'
   - 'if [ "${TRAVIS_NODE_VERSION}" != "0.6" ] && [ "${TRAVIS_NODE_VERSION}" != "0.9" ]; then npm install -g npm; fi'
 script:
-  - 'if [ "${TRAVIS_NODE_VERSION}" != "4.4" ]; then npm run tests-only ; else npm test ; fi'
+  - 'if [ -n "${LINT-}" ]; then npm run lint ; fi'
+  - 'if [ -n "${COVERAGE-}" ]; then npm run coverage ; fi'
+  - 'if [ -n "${TEST-}" ]; then npm run tests-only ; fi'
 sudo: false
+env:
+  - TEST=true
 matrix:
   fast_finish: true
+  include:
+    - node_js: "node"
+      env: LINT=true
   allow_failures:
+    - node_js: "6.6"
+    - node_js: "6.5"
+    - node_js: "6.4"
+    - node_js: "6.3"
+    - node_js: "6.2"
+    - node_js: "6.1"
+    - node_js: "6.0"
+    - node_js: "5.11"
+    - node_js: "5.10"
+    - node_js: "5.9"
     - node_js: "5.8"
     - node_js: "5.7"
     - node_js: "5.6"
@@ -59,6 +89,8 @@ matrix:
     - node_js: "5.2"
     - node_js: "5.1"
     - node_js: "5.0"
+    - node_js: "4.5"
+    - node_js: "4.4"
     - node_js: "4.3"
     - node_js: "4.2"
     - node_js: "4.1"
