--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"pretest": "parallelshell 'npm run --silent lint' 'es-shim-api --bound --property'",
+		"pretest": "npm run --silent lint && es-shim-api --bound --property",
 		"test": "npm run --silent tests-only",
 		"posttest": "npm run --silent security",
 		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim",
@@ -15,7 +15,7 @@
 		"test:implementation": "node test/index.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "parallelshell 'npm run --silent jscs' 'npm run --silent eslint'",
+		"lint": "npm run --silent jscs && npm run --silent eslint",
 		"eslint": "eslint *.js test/*.js",
 		"jscs": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
@@ -52,8 +52,7 @@
 		"eslint": "^3.6.1",
 		"@ljharb/eslint-config": "^8.0.0",
 		"@es-shims/api": "^1.2.0",
-		"for-each": "^0.3.2",
-		"parallelshell": "^2.0.0"
+		"for-each": "^0.3.2"
 	},
 	"testling": {
 		"files": "test/index.js",
