--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 os:
  - linux
 node_js:
-  - "10.7"
+  - "10.8"
   - "9.11"
   - "8.11"
   - "7.10"
@@ -37,6 +37,8 @@ matrix:
       env: POSTTEST=true
     - node_js: "4"
       env: COVERAGE=true
+    - node_js: "10.7"
+      env: TEST=true ALLOW_FAILURE=true
     - node_js: "10.6"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "10.5"
