--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
 		"test:implementation": "node test/index.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "npm run --silent jscs && npm run --silent eslint",
-		"eslint": "eslint *.js test/*.js",
-		"jscs": "jscs *.js test/*.js",
+		"lint": "eslint .",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "npm run --silent build",
 		"security": "nsp check"
@@ -52,7 +50,6 @@
 		"eslint": "^5.3.0",
 		"for-each": "^0.3.3",
 		"is": "^3.2.1",
-		"jscs": "^3.0.7",
 		"nsp": "^3.2.1",
 		"tape": "^4.9.1"
 	},
