--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
 		"shim"
 	],
 	"dependencies": {
-		"define-properties": "^1.1.3",
-		"function-bind": "^1.1.1",
-		"object-keys": "^1.1.1"
+		"define-properties": "^1.1.3"
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
