[Refactor] only use `global` in node; only check browser globals in browsers
Fixes #2.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 	"description": "ECMAScript spec-compliant polyfill/shim for `globalThis`",
 	"license": "MIT",
 	"main": "index.js",
+	"browser": {
+		"./implementation": "./implementation.browser.js"
+	},
 	"scripts": {
 		"pretest": "npm run --silent lint && es-shim-api --bound --property",
 		"test": "npm run --silent tests-only",
