[Tests] add `implementation` est; run `es-shim-api` in postlint; use `tape` runner

--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
 		"./implementation": "./implementation.browser.js"
 	},
 	"scripts": {
-		"pretest": "npm run --silent lint && es-shim-api --bound --property",
+		"pretest": "npm run lint",
 		"test": "npm run --silent tests-only",
 		"posttest": "npx aud --production",
-		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim",
-		"test:native": "node test/native.js",
-		"test:shim": "node test/shimmed.js",
-		"test:implementation": "node test/index.js",
+		"tests-only": "tape 'test/**/*.js'",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
 		"lint": "eslint .",
+		"postlint": "es-shim-api --bound --property",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "npm run --silent build",
 		"version": "auto-changelog && git add CHANGELOG.md",
