--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"./implementation": "./implementation.browser.js"
 	},
 	"scripts": {
+		"prepublish": "safe-publish-latest",
 		"pretest": "npm run lint",
 		"test": "npm run --silent tests-only",
 		"posttest": "npx aud --production",
@@ -45,14 +46,15 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
-		"@ljharb/eslint-config": "^17.2.0",
-		"aud": "^1.1.2",
-		"auto-changelog": "^2.2.0",
+		"@ljharb/eslint-config": "^17.3.0",
+		"aud": "^1.1.3",
+		"auto-changelog": "^2.2.1",
 		"browserify": "^16.5.2",
-		"eslint": "^7.7.0",
+		"eslint": "^7.14.0",
 		"for-each": "^0.3.3",
 		"is": "^3.3.0",
 		"nyc": "^10.3.2",
+		"safe-publish-latest": "^1.1.4",
 		"tape": "^5.0.1"
 	},
 	"testling": {
