--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"./implementation": "./implementation.browser.js"
 	},
 	"scripts": {
-		"prepublish": "safe-publish-latest && npm run --silent build",
+		"prepublish": "safe-publish-latest && (not-in-publish || npm run --silent build)",
 		"pretest": "npm run lint",
 		"test": "npm run --silent tests-only",
 		"posttest": "npx aud --production",
@@ -51,6 +51,7 @@
 		"browserify": "^16.5.2",
 		"eslint": "^7.20.0",
 		"for-each": "^0.3.3",
+		"in-publish": "^2.0.1",
 		"is": "^3.3.0",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^1.1.4",
