--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.2.3",
-		"@ljharb/eslint-config": "^20.0.0",
-		"aud": "^1.1.5",
-		"auto-changelog": "^2.3.0",
+		"@ljharb/eslint-config": "^21.0.0",
+		"aud": "^2.0.0",
+		"auto-changelog": "^2.4.0",
 		"browserify": "^16.5.2",
-		"eslint": "^8.4.1",
+		"eslint": "=8.8.0",
 		"for-each": "^0.3.3",
 		"in-publish": "^2.0.1",
 		"is": "^3.3.0",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^2.0.0",
-		"tape": "^5.3.2"
+		"tape": "^5.5.3"
 	},
 	"testling": {
 		"files": "test/index.js",
