--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"for-each": "^0.3.3",
 		"in-publish": "^2.0.1",
 		"is": "^3.3.0",
+		"npmignore": "^0.3.1",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^2.0.0",
 		"tape": "^5.7.5"
