--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"prepublish": "not-in-publish || npm run prepublishOnly",
 		"pretest": "npm run lint",
 		"test": "npm run --silent tests-only",
-		"posttest": "aud --production",
+		"posttest": "npx npm@\">= 10.2\" audit --production",
 		"tests-only": "nyc tape 'test/**/*.js'",
 		"lint": "eslint --ext=js,mjs .",
 		"postlint": "es-shim-api --bound --property",
@@ -49,7 +49,6 @@
 	"devDependencies": {
 		"@es-shims/api": "^2.5.0",
 		"@ljharb/eslint-config": "^21.1.0",
-		"aud": "^2.0.4",
 		"auto-changelog": "^2.4.0",
 		"browserify": "^16.5.2",
 		"eslint": "=8.8.0",
