--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@ljharb/eslint-config": "^21.1.1",
 		"auto-changelog": "^2.5.0",
 		"browserify": "^16.5.2",
+		"encoding": "^0.1.13",
 		"eslint": "=8.8.0",
 		"for-each": "^0.3.5",
 		"in-publish": "^2.0.1",
